@@ -83,7 +83,9 @@ void FileLister::browse() {
 
 			if (S_ISDIR(st.st_mode)) {
 				if (!showDirectories) continue;
+#ifdef TARGET_GP2X
 				if (!(path=="/mnt/" && (file!="sd" && file!="ext" && file!="nand")))
+#endif
 					directories.push_back(file);
 			} else {
 				if (!showFiles) continue;
