@@ -1,8 +1,9 @@
 -----------
 New in 0.10
 -----------
+Added support for the touchscreen
 Added internal explorer that can launch .gpu .gpe and .sh files
-Added button indicators for selecting sections
+Added graphic indicators for switching sections
 Cpu clock raised when loading manuals
 Added support for bmp and jpg/jpeg files for manuals
 Added preview of images when selecting icons
